# faltas-parlamentares

./: .gitignore  CLAUDE.md  LICENSE  README.md
.github/workflows/: update.yml
ingest/: pyproject.toml
ingest/ingest/: alteracoes.py  fetch.py  main.py  parse.py
site/: astro.config.mjs  package.json  pnpm-lock.yaml
site/public/: CNAME  robots.txt
site/scripts/: og.html
site/src/data/: deputados.json  meta.json  substituicoes.json
site/src/data/deputado/: 1132.json  1458.json  1478.json  1517.json  1554.json  162.json  1657.json  1713.json  1738.json  1893.json  1897.json  1992.json  2061.json  2071.json  2105.json  2106.json  2114.json  2209.json  2297.json  2304.json  2397.json  2445.json  2576.json  2641.json  2885.json  321.json  3918.json  3939.json  4090.json  4126.json  4147.json  416.json  4186.json  4197.json  4209.json  4221.json  4223.json  4300.json  4328.json  4330.json  (+190 more)
site/src/layouts/: Base.astro
site/src/lib/: timestamps.ts
site/src/pages/: 404.astro  index.astro  metodologia.astro  motivos.astro  transparencia.astro
site/src/pages/deputado/: [bid].astro
site/src/pages/gp/: [slug].astro
site/src/pages/gp/[slug]/motivo/: [motivoSlug].astro
site/src/pages/motivo/: [slug].astro
