[project]
name = "faltas-parlamentares-ingest"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "lxml>=6.1.1",
    "pydantic>=2.13.4",
]

[tool.hatch.build.targets.wheel]
packages = ["ingest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
